fix footer
this helps not overlap images that are too close to the bottom of the page otherwise

--- a/basic.css
+++ b/basic.css
@@ -1,6 +1,5 @@
 footer {
-    position: fixed;
-    left: 0;
+    position: sticky;
     bottom: 0;
     width: 100%;
     text-align: center;
